--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mui-example",
-  "homepage": "http://galmighty17.github.io/MUI-example",
+  "homepage": "https://galmighty17.github.io/MUI-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
